--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,8 +2,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 30px;
-    line-height: 61px;
+    font-size: 2vw;
 
     color: #FFFFFF;
 }
