--- a/src/components/FooterWhite/style.css
+++ b/src/components/FooterWhite/style.css
@@ -9,7 +9,7 @@
     border: 2px solid #A4BEFF
 }
 
-.number {
+.footer-text {
     font-family: Inter;
     font-size: 1.5vw;
     font-weight: 800;
