--- a/src/app/(whiteFoot)/statisticsPage/style.css
+++ b/src/app/(whiteFoot)/statisticsPage/style.css
@@ -42,6 +42,7 @@
     height: 200px;
     width: 200px;
     background-color: #293991;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 #content1 {
