--- a/src/app/(blueFoot)/globals.css
+++ b/src/app/(blueFoot)/globals.css
@@ -1,5 +1,5 @@
 .pageHeading {
-    font-family: Kefa;
+    font-family: var(--font-kefa);
     font-size: 5vw;
     font-weight: 700;
     line-height: 127.19px;
@@ -17,9 +17,9 @@
     border: 3px solid #293991
 }
 
-.text-box {
-    font-family: Inter;
-    font-size: 3vw;
+.text-box-page {
+    font-family: var(--font-inter);
+    font-size: 2vw;
     font-weight: 800;
     line-height: 66.56px;
     text-align: left;
@@ -27,9 +27,9 @@
 
 }
 
-.text-box-span {
-    font-family: Inter;
-    font-size: 3vw;
+.text-box-span-page {
+    font-family: var(--font-inter);
+    font-size: 2vw;
     font-weight: 800;
     line-height: 66.56px;
     text-align: left;
@@ -42,7 +42,7 @@
 }
 
 .watch-button-text {
-    font-family: Inter;
+    font-family: var(--font-inter);
     font-size: 1.5vw;
     font-weight: 800;
     line-height: 33.89px;
