--- a/src/app/(blueFoot)/planPage/style.css
+++ b/src/app/(blueFoot)/planPage/style.css
@@ -1,18 +1,24 @@
 .pageHeading {
-    font-family: Kefa;
+    font-family: var(--font-kefa);
     font-size: 5vw;
     font-weight: 700;
-    line-height: 10vh;
+    line-height: 127.19px;
     color: #293991;
 }
 
+
+.App {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
 .box {
     border: 3px solid #293991
 }
 
 .text-box {
-    font-family: Inter;
+    font-family: var(--font-inter);
     font-size: 3vw;
     font-weight: 800;
     line-height: 66.56px;
@@ -22,7 +28,7 @@
 }
 
 .text-box-span {
-    font-family: Inter;
+    font-family: var(--font-inter);
     font-size: 3vw;
     font-weight: 800;
     line-height: 66.56px;
@@ -36,7 +42,7 @@
 }
 
 .watch-button-text {
-    font-family: Inter;
+    font-family: var(--font-inter);
     font-size: 1.5vw;
     font-weight: 800;
     line-height: 33.89px;
