--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,7 @@
 .navTitle {
-    font-family: 'Inter';
+    font-family: var(--font-inter);
     font-style: normal;
-    font-weight: 700;
+    font-weight: 650;
     font-size: 2vw;
 
     color: #FFFFFF;
