--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -2,15 +2,15 @@
     border: 1px solid #FFFFFF;
 }
 
-.number {
-    font-family: Khula;
-    font-size: 1.5vw;
+.numberText {
+    font-family: var(--font-khula);
+    font-size: 1.2vw;
     font-weight: 400;
     color: #FFFFFF;
 }
 
 .pageHeading {
-    font-family: Kefa;
+    font-family: var(--font-kefa);
     font-size: 5vw;
     font-weight: 700;
     line-height: 127.19px;
