--- a/src/app/(whiteFoot)/statisticsPage/style.css
+++ b/src/app/(whiteFoot)/statisticsPage/style.css
@@ -11,7 +11,7 @@
 
 .text-box {
     height: 114px;
-    border: 8px solid #293991;
+    border: 4px solid #293991;
     border-top-width: 0px;
 }
 
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50px;
+    margin-bottom: 50px;
 }
 
 .content h4 {
