--- a/src/app/(blueFoot)/planPage/style.css
+++ b/src/app/(blueFoot)/planPage/style.css
@@ -14,26 +14,17 @@
 }
 
 .box {
-    border: 3px solid #293991
+    border: 3px solid #293991;
+    padding-left: 20px;
 }
 
 .text-box {
     font-family: var(--font-inter);
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: 800;
-    line-height: 66.56px;
+    line-height: 3vw;
     text-align: left;
     color: #293991;
-
-}
-
-.text-box-span {
-    font-family: var(--font-inter);
-    font-size: 3vw;
-    font-weight: 800;
-    line-height: 66.56px;
-    text-align: left;
-    color: #A7B4FF;
 }
 
 .watch-button {
