--- a/src/app/(blueFoot)/foundationPage/style.css
+++ b/src/app/(blueFoot)/foundationPage/style.css
@@ -21,11 +21,15 @@ h1 {
 
 .buttons {
     width: 90%;
-    margin: 30px;
+    height: 200px;
+    padding: 10px;
+    margin-top: 50px;
     position: relative;
+    display: flex;
 }
 
 #sInfoPage {
+    font-size: 20px;
     padding-left: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -38,18 +42,32 @@ h1 {
 button {
     background-color: #2036ac;
     color: white;
-    padding: 8px;
-    padding-top: 3px;
-    padding-bottom: 0px;
     border-width: 0px;
     border-radius: 8px;
     display: flex;
     justify-content: center;
     margin: 5px;
     width: 150px;
+    height: 45px;
 }
 
-h3 {
+.button p {
+    font-weight: bold;
+    font-family: Calibri;
     font-size: 24px;
-    font-family: "Droid Sans";
+}
+.foundHead{
+    font-family: var(--font-kefa);
+    font-size: 2.5vw;
+    font-weight: 700;
+    line-height: 127.19px;
+    color: #293991;
+    height: 10%;
+    margin-left: 50px;
+}
+#niet{
+    color: #f14b4c;
+}
+#found{
+    color: black;
 }
