--- a/src/app/(blueFoot)/planPage/style.css
+++ b/src/app/(blueFoot)/planPage/style.css
@@ -6,25 +6,27 @@
     color: #293991;
 }
 
-
-.App {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
 .box {
     border: 3px solid #293991;
-    padding-left: 20px;
+    padding-left: 10px;
 }
 
 .text-box {
     font-family: var(--font-inter);
-    font-size: 2vw;
+    font-size: 1.7vw;
     font-weight: 800;
     line-height: 3vw;
     text-align: left;
     color: #293991;
+}
+
+.text-box-span {
+    font-family: var(--font-inter);
+    font-size: 1.7vw;
+    font-weight: 800;
+    line-height: 3vw;
+    text-align: left;
+    color: #A7B4FF;
 }
 
 .watch-button {
