--- a/src/app/(blueFoot)/globals.css
+++ b/src/app/(blueFoot)/globals.css
@@ -16,11 +16,18 @@
 .box {
     border: 3px solid #293991;
     padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+.image-box {
+    border: 3px solid #293991;
+    width: 32vmax;
+    height: 32vmax;
 }
 
 .text-box-page {
     font-family: var(--font-inter);
-    font-size: 1.7vw;
+    font-size: 2.8vw;
     font-weight: 800;
     line-height: 3vw;
     text-align: left;
@@ -29,7 +36,7 @@
 
 .text-box-span-page {
     font-family: var(--font-inter);
-    font-size: 1.7vw;
+    font-size: 2.8vw;
     font-weight: 800;
     line-height: 3vw;
     text-align: left;
@@ -43,9 +50,8 @@
 
 .watch-button-text {
     font-family: var(--font-inter);
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     font-weight: 800;
-    line-height: 33.89px;
     text-align: left;
     color: #FFFFFF;
 }
