--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,9 +1,8 @@
 .navTitle {
     font-family: var(--font-inter);
-    font-style: normal;
     font-weight: 650;
-    font-size: 2vw;
-
+    font-size: 2.7vw;
+    padding-left: 5px;
     color: #FFFFFF;
 }
 
